<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="not_found_data_message">Không tìm thấy dữ liệu :(</string>
    <string name="txt_btn_retry">Thử lại</string>
    
    <string name="app_name">Little Genius</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="testimonial_list_view_title">Parents\'remark</string>

    <!-- <string name="kms_info_name_label">Họ tên:</string> -->
    <!-- <string name="kms_info_email_label">Email:</string> -->
    <!-- <string name="kms_info_phone_label">Điện thoại:</string> -->
    <!-- <string name="kms_info_address_label">Địa chỉ:</string> -->
    <string name="course_name_label">Tên khoá học</string>
    <string name="course_status_label">Trạng thái</string>
    <string name="dialogTitleSelectDate">Chọn ngày sinh</string>
    <string name="empty_warning">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="email_warning">Email không hợp lệ.</string>
    <string name="password_warning">Mật khẩu không trùng khớp.</string>
    <string name="phone_warning">Số điện thoại không hợp lệ.</string>
    <string name="kms_info_update_btn">Cập nhật thông tin</string>
    <string name="kms_info_change_password_btn">Đổi mật khẩu</string>
    <string name="exit_dialog_title">Thoát ứng dụng</string>
    <string name="exit_dialog_message">Bạn muốn thoát ứng dụng?</string>
    <string name="exit_dialog_OKBtn_title">Thoát</string>
    <string name="exit_dialog_CancelBtn_label">Huỷ</string>
    <string name="sending_failed">Gửi không thành công.</string>
    <string name="sending_success">Gửi thành công.</string>
    <string name="update_failed">Cập nhật không thành công.</string>
    <string name="update_success">Cập nhật thành công.</string>
    <string name="login_success_message">Đăng nhập thành công.</string>
    <string name="login_failed_message">Đăng nhập không thành công.</string>
    <string name="login_title">Đăng nhập</string>
    <string name="register_title">Đăng ký</string>
    <string name="register_failed">Đăng ký không thành công.</string>
    <string name="username_label">Tên đăng nhập:</string>
    <string name="password_label">Mật khẩu:</string>
    <string name="confirm_pass_label">Nhập lại mật khẩu</string>
    <string name="username_hint">Nhập họ tên</string>
    <string name="password_hint">Nhập mật khẩu</string>
    
    <string name="new_password_hint">Nhập mật khẩu mới</string>
    <string name="confirm_new_password_hint">Nhập lại mật khẩu mới</string>
    
    <string name="login_btn">Đăng nhập</string>
    <string name="register_btn">Đăng ký</string>
    <string name="name_label">Tên đăng nhập:</string>
    <string name="name_hint">Nhập tên đăng nhập</string>
    <string name="email_label">Email:</string>
    <string name="email_hint">Nhập email</string>
    <string name="phone_label">Điện thoại:</string>
    <string name="phone_hint">Nhập điện thoại</string>
    <string name="address_label">Địa chỉ:</string>
    <string name="address_hint">Nhập địa chỉ</string>
    <string name="contact_infomation_label">Thông tin liên hệ</string>
    <string name="txt_user">Họ tên</string>
    <string name="txt_pass">Mật khẩu</string>
    
    <string name="str_login">Đăng nhập</string>
    <string name="str_logout">Đăng xuất</string>
    <string name="str_username">Họ tên(*)</string>
    <string name="str_email">Email(*)</string>
    <string name="str_phone">Điện thoại(*)</string>
    <string name="str_birthday">Ngày sinh(*)</string>
    <string name="str_preferred_date">Chọn ngày</string>
    <string name="str_preferred_outlet">Preferred outlet :</string>
    <string name="str_hougang">Hougang</string>
    <string name="str_preferred_timing">Thời gian:</string>
    <string name="str_send">Gửi</string>
    <string name="kms_menu_camera_btn">Camera</string>
    <string name="kms_menu_video_btn">Video</string>
    <string name="kms_menu_courses_btn">Khoá học</string>
    <string name="kms_menu_info_btn">Thông tin</string>
    <string name="versionNameLabel">Phiên bản</string>
    <string name="home_menu_program_btn">CHƯƠNG TRÌNH</string>
    <string name="home_menu_testimonials_btn">NHẬN XÉT</string>
    <string name="home_menu_preview_btn">LIÊN HỆ</string>
    <string name="home_menu_kms_btn">THÀNH VIÊN</string>
    <string name="home_menu_contact_btn">ĐỊA CHỈ</string>

    <string name="fragment_home_title">TRANG CHỦ</string>
    <string name="fragment_programe_title">CHƯƠNG TRÌNH</string>
    <string name="fragment_testimonial_title">NHẬN XÉT</string>
    <string name="fragment_preview_title">LIÊN HỆ</string>
    <string name="fragment_kms_title">THÀNH VIÊN</string>
    <string name="fragment_contact_title">ĐỊA CHỈ</string>
    <string name="fragment_about_title">GIỚI THIỆU</string>
    
    <string name="menu_home_title">Trang chủ</string>
    <string name="menu_programe_title">Chương trình</string>
    <string name="menu_testimonial_title">Nhận xét</string>
    <string name="menu_preview_title">Liên hệ</string>
    <string name="menu_kms_title">Thành viên</string>
    <string name="menu_contact_title">Địa chỉ</string>
    <string name="menu_about_title">Giới thiệu</string>
    <!-- menu home bar -->
    <string name="home_menu_about_btn">GIỚI THIỆU</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
<!--     <string name="replace_data_one">Tải cẩm nang giới thiệu về chương trình My Little Genius ở đây</string> -->
<!--     <string name="replace_data_two">Đọc thêm</string> -->
	<string name="please_waitting">Vui lòng đợi...</string>
</resources>