<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_login_background"
        android:orientation="vertical"
        android:paddingBottom="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textColor="@color/dialog_login_text_color" />

            <EditText
                android:id="@+id/nameEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialog_login_edittext_background"
                android:hint="@string/name_hint"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textColor="@color/dialog_login_text_color" />

            <EditText
                android:id="@+id/userNameEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialog_login_edittext_background"
                android:hint="@string/username_hint"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/dialog_login_text_color" />

            <EditText
                android:id="@+id/passEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialog_login_edittext_background"
                android:hint="@string/password_hint"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@color/dialog_login_text_color" />

            <EditText
                android:id="@+id/emailEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialog_login_edittext_background"
                android:hint="@string/email_hint"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_label"
                android:textColor="@color/dialog_login_text_color" />

            <EditText
                android:id="@+id/phoneEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialog_login_edittext_background"
                android:hint="@string/phone_hint"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:textColor="@color/dialog_login_text_color" />

            <EditText
                android:id="@+id/addressEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialog_login_edittext_background"
                android:hint="@string/address_hint"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/registerBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/register_button_blue2"
                android:clickable="true" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_btn"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_middle_top_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_title"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/exitDialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_login_exit" />

</RelativeLayout>