<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/userAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/logo"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/green" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bright_orange_2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textColor="@color/brightRed" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_kms_edittext_background"
                android:textColor="@color/brightRed"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/green"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@color/brightRed"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_kms_edittext_background"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/brightRed"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/brightRed"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_kms_edittext_background"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/brightRed"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pass_label"
                android:textColor="@color/brightRed"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_kms_edittext_background"
                android:hint="@string/confirm_new_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/brightRed"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:textColor="@color/brightRed" />

            <TextView
                android:id="@+id/userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brightRed"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/updateInfoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_blue_2"
                android:text="@string/kms_info_update_btn"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_blue_2"
                android:text="@string/str_logout"
                android:textColor="@color/white"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>