<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/home_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:orientation="vertical" >

        <WebView
            android:id="@+id/webViewMainContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/contact_infomation_label"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txt_user"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_username"
                        android:textColor="@color/brightRed"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_user"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_email"
                        android:textColor="@color/brightRed"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_phone"
                        android:textColor="@color/brightRed"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_birthday"
                        android:textColor="@color/brightRed"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_birthday"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_preferred_date"
                        android:textColor="@color/brightRed"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/str_preferredDate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/dialog_login_edittext_background"
                        android:inputType="date" />
                </LinearLayout>                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/str_preferred_timing"
                    android:textColor="@color/brightRed"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listViewRadio"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="start"
                    android:background="@color/home_background"
                    android:choiceMode="singleChoice"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0dp" 
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/sendDataBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/base_button_blue"
                android:text="@string/str_send"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>